2018-07-24 5.0.2.3 Wu Rongjie<wurongjie@deepin.com>
    * Use new domain name
    * Fix i18n error caused empty page

2018-07-24 5.0.2.2 Xu Shaohua<xushaohua2016@outlook.com>
    * Update i18n

2018-07-24 5.0.2.1 Xu Shaohua<xushaohua2016@outlook.com>
    * Fix homepage control button

2018-07-23 5.0.2 Xu Shaohua<xushaohua2016@outlook.com>
    * Fix ui issues

2018-07-06 5.0.1 Xu Shaohua<xushaohua2016@outlook.com>
    * Rewrite UI with angular

2018-01-20 5.0.0 xushaohua<xushaohua@deepin.com>
	* Port to qcef

2017-10-26 4.0.11 xushaohua<xushaohua@deepin.com>
	* Fixed: can not move the window

2017-09-18 4.0.10 xushaohua<xushaohua@deepin.com>
	* Fixed: invalid tooltip css