@@ -40,7 +40,7 @@ Requirements: The author should be the original personal developer or developer 
 
 ## How to be a packager?
 
-The packager should provide the package and the metadata as the application requirements of Deepin Store. At present, there is not an open automatic packaging channel. To be a packager, please contact appstore@deepin.com for packaging guide. When a third party packaging channel is officially open, there will be a notice in community.
+At present, the automatic packaging channel is not open. To be a packager, please provide the package and the metadata in personal platform: https://dstore-metadata.deepin.org according to the requirements of Deepin Store, and then contact appstore@deepin.com with deepin ID, Github ID, project address, introduction, email and author info. Deepin team will keep contact with you. When the packaging channel is officially open, there will be a notice in community.
 After becoming a packager of a certain app, when the source app is updated, the packager must package and update the app in Deepin Store within one week. If there are three times of delays, or an update is delayed for more than two weeks, the packager will have no permission on the app any longer, and the subsequent donation will no longer belong to the packager.
 If the original author provides a qualified package, or there is already a qualified packager, we will not accept a new packager for that app. Application in flatpak format is in priority, so if the app does not have a flatpak package, the packager that delivers it in flatpak format will be accepted.
 
