@@ -41,7 +41,7 @@
 
 ## 如何成为打包者
 
-打包者需要按照深度商店软件要求，提供深度商店要求的软件包和元数据信息。当前我们没有开放第三方自动打包通道，希望成为打包者的朋友请联系 appstore@deepin.com，会有官方人员与您联系。第三方打包通道正式开通前会另行通知。
+打包者需要按照深度商店软件要求，提供深度商店要求的软件包和元数据信息。当前我们没有开放第三方自动打包通道，希望成为打包者的朋友在后台提交应用基本信息后，请发送邮件到 appstore@deepin.com，内容包括：申请者 id(deepinid) 、Github id、项目地址、项目介绍、是否为原作者、联系邮箱。会有官方人员与您联系。第三方打包通道正式开通前会另行通知。
 成为某个软件的打包者之后，如未来原软件进行了更新，打包者必须在一周内及时跟进原始软件的更新。如出现三次延迟更新，或单次延迟更新超过两周，将取消该打包者在该软件包上的权限，后续的赞赏也不再计入该打包者名下。
 如果该软件包原始作者提供了符合要求的打包软件，或已经有合格的打包者，我们将不接受该软件新的打包者申请。由于我们会优先收录 flatpak 格式的软件，因此当该软件包没有 flatpak 包格式，而新打包者能够提供以 flatpak 方式进行打包的软件时，我们会接受该软件新打包者的申请。
 
