@@ -7,6 +7,6 @@ export const environment = {
   production: false,
 
   // Server address only used in browser mode.
-  metadataServer: 'https://dstore-metadata.deepin.org',
-  operationServer: 'https://dstore-operation-china.deepin.org',
+  metadataServer: 'https://dstore-metadata.deepin.cn',
+  operationServer: 'https://dstore-operation-china.deepin.cn',
 };
