@@ -1,3 +1,6 @@
+2018-08-1 5.0.2.4 Wu Rongjie<wurongjie@deepin.com>
+    * Update donation statement 
+
 2018-07-24 5.0.2.3 Wu Rongjie<wurongjie@deepin.com>
     * Use new domain name
     * Fix i18n error caused empty page
